# serializer version: 1
# name: test_invalid_multipliers[PenaltyUpdater-1.0-TypeError]
  "The multipliers must be input as a tuple; input of type <class 'float'> was provided."
# ---
# name: test_invalid_multipliers[PenaltyUpdater-multipliers1-ValueError]
  'There must be exactly two multipliers for the penalty parameter; 2 were given.'
# ---
# name: test_invalid_multipliers[PenaltyUpdater-multipliers2-ValueError]
  'The contraction factor (2.0) must be lower than one.'
# ---
# name: test_invalid_multipliers[PenaltyUpdater-multipliers3-ValueError]
  'The expansion factor (0.5) must be greater than or equal to one.'
# ---
# name: test_invalid_multipliers[RadiusUpdater-1.0-TypeError]
  "The multipliers must be input as a tuple; input of type <class 'float'> was provided."
# ---
# name: test_invalid_multipliers[RadiusUpdater-multipliers1-ValueError]
  'There must be exactly two multipliers for the region radius; 2 were given.'
# ---
# name: test_invalid_multipliers[RadiusUpdater-multipliers2-ValueError]
  'The contraction factor (2.0) must be lower than or equal to one.'
# ---
# name: test_invalid_multipliers[RadiusUpdater-multipliers3-ValueError]
  'The expansion factor (0.5) must be greater than one.'
# ---
# name: test_invalid_thresholds[PenaltyUpdater-0.1-TypeError]
  "The thresholds must be input as a tuple; input of type <class 'float'> was provided."
# ---
# name: test_invalid_thresholds[PenaltyUpdater-thresholds1-ValueError]
  'There must be exactly two thresholds for the decreases ratio; 1 were given.'
# ---
# name: test_invalid_thresholds[PenaltyUpdater-thresholds2-ValueError]
  'The update threshold (0.2) must be lower than or equal to the non-expansion threshold (0.1).'
# ---
# name: test_invalid_thresholds[RadiusUpdater-0.1-TypeError]
  "The thresholds must be input as a tuple; input of type <class 'float'> was provided."
# ---
# name: test_invalid_thresholds[RadiusUpdater-thresholds1-ValueError]
  'There must be exactly two thresholds for the decreases ratio; 1 were given.'
# ---
# name: test_invalid_thresholds[RadiusUpdater-thresholds2-ValueError]
  'The update threshold (0.2) must be lower than or equal to the non-contraction threshold (0.1).'
# ---
